[package]
name = "hangeul-md"
version = "1.0.0"
description = "한글MD 1.0 - Ultra-lightweight Markdown editor"
authors = ["HangeulMD Team"]
edition = "2021"

[lib]
name = "hangeul_md_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
